got the paper to some kind of manageable state

--- a/systemdynamics/exercise3/chemotaxis.bib
+++ b/systemdynamics/exercise3/chemotaxis.bib
@@ -22,3 +22,10 @@ address = "New York, NY",
 year = 2004
 }
 
+@book{Fall,
+author = "Christopher P. Fall and Eric S. Marland and John M. Wagner and John J. Tyson",
+title = "Computational Cell Biology",
+publisher = "Springer-Verlag",
+address = "New York, NY",
+year = 2002
+}
